--- a/arcanoid.html
+++ b/arcanoid.html
@@ -23,5 +23,5 @@ body {
 	<div id="game_container">
 		<canvas id='game'></canvas>
 	</div>
-	<script src='arcanoid.js'> </script>
+	<script src='./dist/arcanoid.js'> </script>
 </body>
